NewLogos and stuff

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             <img
               onclick="logoRedirect()"
               src="img/NEWLOGO2.png"
-              width="255px"
-              height="80px"
+              height="66px"
+              width="250px"
+              style="margin-top: 15px; margin-left: 70px;"
             />
           </div>
 
@@ -39,10 +40,9 @@
           </a>
 
           <ul class="right hide-on-med-and-down ">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="login.html">Log In</a></li>
+            <li><a class="active" href="login.html">Log In</a></li>
           </ul>
         </div>
       </div>
@@ -52,21 +52,21 @@
       <div
         href="#"
         class=" brand-logo"
-        style=" box-shadow: 0 0 10px black; background: grey;"
       >
         <img
-          style="margin-left: 15px;"
+          style="margin-left: -15px;"
           onclick="alert('lsa mfesh 7aga sh8ala')"
-          src="OnlyO.png"
-          height="65px"
-          width="65px"
+          src="img/NEWLOGO2.png"
+          height="55px"
+          width="230px"
         />
       </div>
       <li><a href="#">Home</a></li>
-      <li><a href="#">Video</a></li>
       <li><a href="#">Service</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
+      <li><a href="login.html">Log In</a></li>
+
     </ul>
 
     <!-- CONTENT-AREA -->
@@ -84,16 +84,16 @@
 <div class="user-area">
   <div class="leftside">
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos animi nam nesciunt, non amet velit esse modi iusto delectus voluptatibus si
-      nt possimus vel quas? Sit aut laudantium at iste beatae!
+      Lorem ipsum dom nesciunt, non ametsit esse modi iusto delectus voluptatibus si
+      nt possimus vel queatae!
     </p>
     <button><a href="#">Sell</a></button>
   </div>
 
   <div class="rightside">
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos animi nam nesciunt, non amet velit esse modi iusto delectus voluptatibus si
-      nt possimus vel quas? Sit aut laudantium at iste beatae!
+      Lorem ipsum dom nesciunt, non ametsit esse modi iusto delectus voluptatibus si
+      nt possimus vel queatae!
     </p>
     <button><a href="#">Buy</a></button>
   </div>
