--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       Lorem ipsum dom nesciunt, non ametsit esse modi iusto delectus voluptatibus si
       nt possimus vel queatae!
     </p>
-    <button><a href="#">Sell</a></button>
+    <button onclick="sellClick()"> <a href="upload.html">Sell</a></button>
   </div>
 
   <div class="rightside">
@@ -101,16 +101,19 @@
 </div>
 
     <!-- Site footer -->
+    <footer style="text-align: center;">
      <div class="footer">
   <div class="icons">
     <i class="fab fa-facebook"></i> 
     <i class="fab fa-instagram"></i>
     <i class="fab fa-twitter"></i>
-    <i class="fab fa-whatsapp"></i>
+    <i class="fab fa-whatsapp"></i><br>
+    copyright &copy; 2019 by:Hassan Mostafa
    
 
   </div>
 </div> 
+</footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
@@ -123,6 +126,13 @@
         window.location.href = "index.html";
       }
 
+
+      function sellClick(){
+        window.location.href = "upload.html";
+
+      }
+
+      
 
     </script>
   </body>
