--- a/login.html
+++ b/login.html
@@ -143,6 +143,11 @@
       </div>
     </div>
     <!-- BOTTOM-SIDE -->
+    <footer
+      style="text-align: center; font-family:Arial, Helvetica, sans-serif; margin-top: 10px;"
+    >
+      copyright &copy; 2019 by:Hassan Mostafa
+    </footer>
 
     <script>
       function showForm() {
