--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
             <!-- pic -->
 
             <div class="form-text">
-              Welcome,
+              Welcome
             </div>
             <p
               style="font-family:Arial, Helvetica, sans-serif; margin-top: -20px;"
