--- a/upload.html
+++ b/upload.html
@@ -42,8 +42,11 @@
         </a>
 
         <ul class="right hide-on-med-and-down ">
+          
           <li><a href="#">Contact</a></li>
-          <li><a href="index.html"> My Account </a></li>
+          <li>  <a href="index.html"> My Account </a></li>
+          <li> <i class="far fa-bell" style="color: #6344a4; margin:5px 30px;"></i>  </li>
+          <li> <i class="fas fa-shopping-cart"  style="color: #6344a4; margin:5px 30px;" ></i> </li>
         </ul>
       </div>
     </nav>
@@ -56,7 +59,7 @@
         <div class="form-area">
           <div class="section-a">
             <div class="title">
-              <h4>List a new product</h4>
+              <h4><i class="fas fa-upload"></i> List a new product</h4>
               <p>Just fill in this form</p>
               <hr />
             </div>
@@ -69,7 +72,7 @@
                 <select
                   name=""
                   id=""
-                  style="display:block; margin-top: 5px; outline: none; border: 1px solid #6344a4; border-radius: 15px;"
+                  style="-webkit-appearance: button; display:block; margin-top: 5px; outline: none; border: 1px solid #6344a4; border-radius: 15px;"
                 >
                   <option value="Human">Human stuff</option>
                   <option value="other">other</option>
@@ -85,6 +88,10 @@
                     style=" resize:vertical ; outline: none; border:1px solid #6344a4;"
                   ></textarea>
                 </div>
+
+                <div id="price-bar" for="">Price
+                  <input type="number">
+                </div >
               </div>
             </div>
           </div>
@@ -265,6 +272,11 @@
       </div>
      
     </div>
+    <footer
+    style="text-align: center; font-family:Arial, Helvetica, sans-serif; margin: 10px; 0"
+  >
+    Copyright &copy; 2019 by:Hassan Mostafa
+  </footer>
 
     <script>
       function logoRedirect() {
