--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css"
     />
-    <link href="//db.onlinewebfonts.com/c/066ce24dae3730ed6c648b09efaea93a?family=Acumin+Variable+Concept" rel="stylesheet" type="text/css"/>
+    
 
 
 
@@ -20,7 +20,7 @@
     <title>TO | HOME</title>
     <link rel="icon" href="img/logorefined.png">
   </head>
-  <body>
+  <body  >
     <!-- NAVBAR-AREA -->
     <nav>
       
@@ -54,7 +54,7 @@
         class=" brand-logo"
       >
         <img
-          style="margin-left: -15px;"
+          style="margin: 10px 0 0 20px;"
           onclick="alert('lsa mfesh 7aga sh8ala')"
           src="img/NEWLOGO2.png"
           height="55px"
@@ -71,29 +71,29 @@
 
     <!-- CONTENT-AREA -->
      <div class="content">
-  <p class="head-content">Hey, Welcome To <br> Our Amazing Office</h1>
-  <p class="slogan">To the universe.</h4>
+  <p class="head-content"> Welcome  <br> To <span class="tradeOnline">Trade Online</span></h1>
+  <p class="slogan">Where buying & selling has never been easier</h4>
   <p class="lorem">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi tempora
-    doloremque id, sapiente possimus pariatur corrupti at repellat cum
-    laboriosam consectetur dolor temporibus quos delectus. Sapiente, nobis. Nam,
-    quaerat laboriosam?
+    Here in Trade Online we belive that buying & selling is for everyone and must be as simple as possible 
+    . so we provide you a place where you find whatever you are looking for with less effort and more comfort . 
+    plus our greatest pride point is the human part means having any issue will be our top priority to help you
+    reach your goal in no time
+
   </p>
 
 
 <div class="user-area">
   <div class="leftside">
-    <p>
-      Lorem ipsum dom nesciunt, non ametsit esse modi iusto delectus voluptatibus si
-      nt possimus vel queatae!
+    <p style="text-transform:capitalize;">Selling a product have never been easier , just click sell and we will take you to our Upload page 
+      . plus we will guide you thoughout the whole process
     </p>
     <button onclick="sellClick()"> <a href="upload.html">Sell</a></button>
   </div>
 
   <div class="rightside">
-    <p>
-      Lorem ipsum dom nesciunt, non ametsit esse modi iusto delectus voluptatibus si
-      nt possimus vel queatae!
+    <p  style="text-transform:capitalize;">
+      serching for somehing in particular  ?.  or just looking ?
+        Please , take a look at out amazing collection . here in our Buy section you will find whatever you need and more
     </p>
     <button><a href="#">Buy</a></button>
   </div>
@@ -104,11 +104,11 @@
     <footer style="text-align: center;">
      <div class="footer">
   <div class="icons">
-    <i class="fab fa-facebook"></i> 
-    <i class="fab fa-instagram"></i>
+      <i class="fab fa-facebook-f"></i>
+      <i class="fab fa-behance"></i>
     <i class="fab fa-twitter"></i>
-    <i class="fab fa-whatsapp"></i><br>
-    copyright &copy; 2019 by:Hassan Mostafa
+    <i class="fab fa-google-plus-g"></i> <br>
+    Copyright &copy; 2019 by:Hassan Mostafa
    
 
   </div>
