--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
               src="img/NEWLOGO2.png"
               height="66px"
               width="250px"
-              style="margin-top: 15px; margin-left: 70px;"
+              style="margin-top: 0px; margin-left: 70px;"
             />
           </div>
 
           <a href="#" class="sidenav-trigger" data-target="mobile-nav">
-            <i class="material-icons">menu</i>
+            <i class="material-icons" style="color: black;">menu</i>
           </a>
 
           <ul class="right hide-on-med-and-down ">
-            <li><a href="#">About Us</a></li>
+            <li class="search-bar" ><input type="text" placeholder="SEARCH..." name=""></li>
             <li><a href="#">Contact</a></li>
             <li><a class="active" href="login.html">Log In</a></li>
           </ul>
