--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       serching for somehing in particular  ?.  or just looking ?
         Please , take a look at out amazing collection . here in our Buy section you will find whatever you need and more
     </p>
-    <button><a href="#">Buy</a></button>
+    <button><a href="buyPath/home.html">Buy</a></button>
   </div>
 </div> 
 </div>
