--- a/login.html
+++ b/login.html
@@ -103,23 +103,23 @@
                   name=""
                   id=""
                   placeholder="First Name"
-                /><br />
+                />
                 <input
                   type="text"
                   name=""
                   id=""
                   placeholder="Last Name"
-                /><br />
+                />
               </div>
 
               <div class="splitter">
-                <input type="email" name="" id="" placeholder="Email" /><br />
+                <input type="email" name="" id="" placeholder="Email" />
                 <input
                   type="number"
                   name=""
                   id=""
                   placeholder="Phone Number.."
-                /><br />
+                />
               </div>
 
               <div class="splitter">
@@ -128,7 +128,7 @@
                   name=""
                   id=""
                   placeholder="Password"
-                /><br /><br />
+                />
                 <!-- <p
                 style="font-size: 13px; margin-left: -60px  ; font-family:Arial, Helvetica, sans-serif; margin-top: -20px;"
               >
