admin page added

--- a/profile.html
+++ b/profile.html
@@ -304,7 +304,7 @@
             document.querySelector('.general-acc-info').style.display = "none";
             document.querySelector('.orders').style.display = "none";
             document.querySelector('.services').style.display = "block";
-            document.querySelector('.settings').style.display = "none"
+            document.querySelector('.settings').style.display = "none";
 
 
 
