--- a/upload.html
+++ b/upload.html
@@ -22,7 +22,7 @@
       <ul>
 
         <li class="search"><input type="text" placeholder="Search..."></li>
-        <li> <a href="#"> My Account </a></li>
+        <li> <a href="profile.html"> My Account </a></li>
 
         <li> <i class="fas fa-shopping-cart"></i> </li>
       </ul>
@@ -176,6 +176,10 @@
           <div class="btn">
             <input type="submit" class="submit-btn" value="SUBMIT" id="" name=""></input>
           </div>
+
+          <div style="text-align: center; margin-top: 5px ; "> <a href="preview.html" style="color:  black;">See
+              Preview</a></div>
+
         </div>
 
       </div>
