--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+<a href="index.html">	<img class="logo" src="img/NEWLOGO2.png"></a>
     <div class="back-to-home">
         <a href="index.html"><i class="fas fa-arrow-left"></i> Back To Home</a>
     </div>
@@ -22,9 +23,10 @@
     <div class="container">
         <div class="info-side">
             <h2>Contact Info</h2>
-            <div class="info"><i class="fas fa-map-marked-alt"></i>
+            <div class="info">
+                <i class="fas fa-map-marked-alt"></i>
                 <p> 1565 Example Road , Los Angeles CA ,9007 </p>
-                </1565>
+
             </div>
             <div class="info"><i class="fas fa-envelope-open-text"></i>
                 <p> example@gmail.com</p>
@@ -66,7 +68,12 @@
 
                 </div>
             </div>
+
+
         </div>
+        <footer>
+
+            Copyrights Trade Online 2020 &copy; by Hassan Mostafa</footer>
     </div>
 </body>
 
