--- a/buyPath/home.html
+++ b/buyPath/home.html
@@ -48,22 +48,22 @@
             </div>
             <ul class="side-mini-ul">
                 <li> <input type="text" name="" id="" placeholder="Search..."> </li>
-                <li> Home </li>
-                <li> Art, Crafts & Collectables </li>
-                <li> Fashion </li>
+                <li> <a href="../index.html"> Home</a> </li>
+                <li><a href=""> Art, Crafts & Collectables</a> </li>
+                <li> <a href="">Fashion </a></li>
 
-                <li> Electronics </li>
-                <li> Furniture </li>
-                <li> Health & Beauty </li>
-                <li> Sports </li>
-                <li> Books </li>
-                <li> Art, Crafts & Collectables </li>
-                <li> Fashion </li>
+                <li><a href=""> Electronics</a> </li>
+                <li><a href=""> Furniture </a></li>
+                <li> <a href="">Health & Beauty</a> </li>
+                <li><a href=""> Sports </a></li>
+                <li><a href=""> Books</a> </li>
+                <li><a href=""> Art, Crafts & Collectables </a></li>
+                <li><a href=""> Fashion </a></li>
 
-                <li> Electronics </li>
-                <li> Furniture </li>
-                <li> Health & Beauty </li>
-                <li> Sports </li>
+                <li><a href=""> Electronics </a></li>
+                <li><a href=""> Furniture</a> </li>
+                <li><a href=""> Health & Beauty </a></li>
+                <li><a href=""> Sports</a> </li>
 
 
 
