--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
         <div class="nav">
             <div class="logo">
                 <img onclick="logoRedirect()" src="img/NEWLOGO2.png" height="60px" width="240px"
-                    style="margin-top: 8px; margin-left: 70px;" />
+                    style="margin-top: 8px;" />
             </div>
 
             <div class="menu">
@@ -305,7 +305,7 @@
             document.getElementById("moreSettings").style.height = "0px";
             document.getElementById("downarrow").style.display = "inline-block";
 
-            document.getElementById("setting").style.borderBottom = "1px solid #e4e4e4";
+            document.getElementById("setting").style.borderBottom = "1px solid rgb(150, 150, 150)";
             document.getElementById("hide").style.display = "none";
 
         }
