--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul class="right hide-on-med-and-down ">
         <li class="search-bar"><input type="text" placeholder="SEARCH..." name=""></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a class="active" href="login.html">Log In</a></li>
+        <li><a class="active" href="login.php">Log In</a></li>
       </ul>
     </div>
     </div>
