--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <li><a href="buyPath/home.html">Visit Store</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="profile.html">Profile</a></li>
-    <li><a href="login.html">Log In</a></li>
+    <li><a href="login.php">Log In</a></li>
 
   </ul>
 
